[gd_scene load_steps=2 format=3 uid="uid://co1vj4gup45om"]

[ext_resource type="Script" uid="uid://b1ki5vdvixcjn" path="res://Talkbox.gd" id="1_kmmn6"]

[node name="Talkbox" type="Area2D"]
collision_layer = 8
script = ExtResource("1_kmmn6")

[node name="end_of_convo_timer" type="Timer" parent="."]
wait_time = 1.305
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="end_of_convo_timer" to="." method="_on_end_of_convo_timer_timeout"]
